Bug 1830518 - Allow Quick filter UI to wrap in Vertical View. r=aleca a=wsmwk
Differential Revision: https://phabricator.services.mozilla.com/D180367

--- a/mail/themes/shared/mail/quickFilterBar.css
+++ b/mail/themes/shared/mail/quickFilterBar.css
@@ -59,6 +59,7 @@
   display: flex;
   align-items: center;
   margin-inline-start: -3px;
+  flex-wrap: wrap;
 }
 
 #qfb-boolean-mode {
@@ -124,6 +125,7 @@
 
 #quickFilterBarContainer {
   display: flex;
+  flex-wrap: wrap;
 }
 
 #quickFilterBarSecondFilters {
@@ -138,6 +140,7 @@
   --button-padding: 3px;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 #quick-filter-bar-filter-text-bar > .button-group > .button {
